[package]
name = "futures-taskset"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4"
futures-core = "0.3"
futures-task = "0.3"
crossbeam-queue = "0.2"
futures = "0.3"

[dev-dependencies]
criterion = "0.3"
futures-util = "0.3"
futures-executor = "0.3"
futures-channel = "0.3"
tokio = { version = "0.2", features = [ "full" ] }

[[bench]]
name = "queue"
harness = false
